--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@babel/preset-react": "^7.12.10",
     "@types/react": "^17.0.0",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.1",
+    "css-loader": "^5.2.7",
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "mini-css-extract-plugin": "^2.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
